adds js and css to high scores page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a class="float-left" href="./assets/html/highscores.html">View High Scores</a>
+        <a class="float-left" href="./highscores.html">View High Scores</a>
         <text class="float-right">Time: <span id="timer-count">0</span></text>
     </header>
     <main id="start-page">
