--- a/highscores.html
+++ b/highscores.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>High Scores</title>
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 <body>
     <main>
@@ -16,6 +16,6 @@
             <button id="clear-btn">Clear Highscores</button>
         </div>
     </main>
-    <script src="/assets/js/highscores.js"></script>
+    <script src="./assets/js/highscores.js"></script>
 </body>
 </html>
